--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.26.0",
+    "react-select": "^5.8.0",
     "recharts": "^2.9.2",
     "sharp": "^0.32.5",
     "tailwind-merge": "^1.14.0",
