--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.26.0",
     "react-select": "^5.8.0",
     "recharts": "^2.9.2",
