--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-table": "^8.10.7",
     "@types/node": "22.1.0",
     "@types/react": "18.3.3",
@@ -59,10 +60,12 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "react-select": "^5.8.0",
     "recharts": "^2.9.2",
     "sharp": "^0.32.5",
+    "sweetalert2": "^11.14.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
