--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "date-fns": "^4.1.0",
     "eslint": "8.48.0",
     "eslint-config-next": "^14.0.1",
+    "input-otp": "^1.4.1",
     "lucide-react": "^0.291.0",
     "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.18",
